--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,51 @@
-name: Your New Jedie Site
-description: You love golang, I love golang
+# Site settings
+title: makoga's log
+email: m7koga@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Welcome to makoga's log.
+# baseurl: "/nangka" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site
+google_analytics: UA-79891929-1 #your GA unique id, e.g. UA-xxxxxxxx-x
+# disqus_username: #Your disqus_username to add comments on the post
+
+# Optional settings
+github: makoga #your github username
+linkedin: #linkedin username
+twitter:
+  username: makoga #twitter username here
+facebook:
+  app_id: 
+  publisher: 
+google_plus: #gplus id or username
+ads: false
+
+
+# Build settings
+markdown: kramdown
+
+sass:
+    style: compressed
+
+gems:
+  - jekyll-redirect-from
+  - jekyll-mentions
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-seo-tag
+  - jekyll-feed
+  - jemoji
+
+defaults:
+    - {scope: {type: posts}, values: {layout: post, permalink : '/:year/:title'}}
+
+include:
+  - _pages
+
+exclude:
+  - CNAME
+  - README.md
+  - Gemfile
+  - Gemfile.lock
+
+paginate: 5
+paginate_path: 'p/:num'
