--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: makoga's log
+title: makoga's memo
 email: m7koga@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Welcome to makoga's log.
+  Welcome to makoga's memo.
 # baseurl: "/nangka" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 google_analytics: UA-79891929-1 #your GA unique id, e.g. UA-xxxxxxxx-x
